--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             pointer-events: none;
         }
         .login-logo {
-            max-width: 120px; /* Logonun boyutunu ayarlar */
+            max-width: 140px; /* Logo boyutu büyütüldü */
             height: auto;
-            margin-bottom: 2rem; /* Logo ile yazı arasına boşluk koyar */
+            margin-bottom: 2rem;
         }
         .login-box p {
             color: var(--text-light);
@@ -220,6 +220,16 @@
             bottom: 0;
             width: 100%;
         }
+        .version-info {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            font-size: 0.75rem;
+            color: var(--text-light);
+            background-color: rgba(255, 255, 255, 0.7);
+            padding: 2px 6px;
+            border-radius: 4px;
+        }
 
     </style>
 </head>
@@ -237,28 +247,33 @@
                 <p id="login-error-message">Hatalı parola.</p>
             </div>
             <footer class="app-footer login-footer">
-                Mayatech Bilgi İşlem 2025©
+                MHDS - Mayatech Bilgi İşlem 2025©
             </footer>
         </div>
 
         <main id="main-screen">
             <header class="main-header">
-                <h1>Mayatech Hızlı Dosya Sistemi</h1>
+                <h1>MHDS</h1>
             </header>
             <div class="file-list-container">
                 <ul class="file-list" id="file-list">
                 </ul>
             </div>
             <footer class="app-footer main-footer">
-                Mayatech Bilgi İşlem 2025©
+                MHDS - Mayatech Bilgi İşlem 2025©
             </footer>
         </main>
     </div>
 
+    <div class="version-info">v.6</div>
+
     <svg width="0" height="0" style="position:absolute;">
         <defs>
-            <symbol id="icon-star" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+            <symbol id="icon-file" viewBox="0 0 24 24">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                <polyline points="14 2 14 8 20 8"></polyline>
+                <line x1="16" y1="13" x2="8" y2="13"></line>
+                <line x1="16" y1="17" x2="8" y2="17"></line>
             </symbol>
         </defs>
     </svg>
@@ -279,7 +294,7 @@
                 listItem.style.animationDelay = `${index * 100}ms`;
                 listItem.innerHTML = `
                     <div class="file-icon">
-                        <svg><use href="#icon-star" /></svg>
+                        <svg><use href="#icon-file" /></svg>
                     </div>
                     <div class="file-details">
                         <div class="file-name">${file.name}</div>
