--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         .nav-list { list-style: none; padding: 0; margin: 0; }
         .nav-item a { display: flex; align-items: center; padding: 0.9rem 1rem; border-radius: 0.5rem; text-decoration: none; color: var(--text-light); font-weight: 500; transition: background-color 0.2s, color 0.2s; }
         .nav-item a:hover { background-color: var(--light-accent); color: var(--primary-accent); }
-        .nav-item svg { width: 20px; height: 20px; margin-right: 1rem; color: var(--text-light); /* İkon rengi de metinle aynı olsun */ transition: color 0.2s; }
-        .nav-item a:hover svg { color: var(--primary-accent); } /* Hover durumunda ikon rengi de değişsin */
+        .nav-item svg { width: 20px; height: 20px; margin-right: 1rem; color: var(--text-light); transition: color 0.2s; }
+        .nav-item a:hover svg { color: var(--primary-accent); }
 
         .main-content { width: 100%; height: 100%; display: flex; flex-direction: column; }
         .main-header { padding: 1rem 1.5rem; border-bottom: 1px solid var(--border-color); flex-shrink: 0; display: flex; justify-content: space-between; align-items: center; }
@@ -151,8 +151,8 @@
     </div>
 
     <div class="version-info" id="version-info">
-        <span class="short-version">v.7</span>
-        <span class="long-version">v.7.0 - Mobil Menü İyileştirmeleri</span>
+        <span class="short-version">v.7.1</span>
+        <span class="long-version">v.7.1 - Hatalar düzeltildi güvenlik iyileştirilmeleri yapıldı</span>
     </div>
 
     <svg width="0" height="0" style="position:absolute;">
@@ -216,6 +216,7 @@
         // --- SAYFA NAVİGASYONU ---
         showFilesButton.addEventListener('click', (e) => {
             e.preventDefault();
+            e.stopPropagation(); // HATA DÜZELTMESİ: Olayın yayılmasını engeller
             welcomeView.style.display = 'none';
             fileView.style.display = 'block';
             mainTitle.textContent = 'Formlar';
