--- a/index.html
+++ b/index.html
@@ -45,10 +45,14 @@
         }
         .sidebar-header { margin-bottom: 2rem; font-size: 1.8rem; font-weight: 700; color: var(--text-dark); }
         .nav-list { list-style: none; padding: 0; margin: 0; }
-        .nav-item a { display: flex; align-items: center; padding: 0.9rem 1rem; border-radius: 0.5rem; text-decoration: none; color: var(--text-light); font-weight: 500; transition: background-color 0.2s, color 0.2s; }
-        .nav-item a:hover { background-color: var(--light-accent); color: var(--primary-accent); }
+        /* DÜZELTME: 'a' etiketi yerine 'button' etiketi için stil ayarlandı */
+        .nav-item button { 
+            display: flex; align-items: center; padding: 0.9rem 1rem; border-radius: 0.5rem; text-decoration: none; color: var(--text-light); font-weight: 500; transition: background-color 0.2s, color 0.2s;
+            width: 100%; background: none; border: none; font-family: 'Inter', sans-serif; font-size: 1rem; cursor: pointer; text-align: left;
+        }
+        .nav-item button:hover { background-color: var(--light-accent); color: var(--primary-accent); }
         .nav-item svg { width: 20px; height: 20px; margin-right: 1rem; color: var(--text-light); transition: color 0.2s; }
-        .nav-item a:hover svg { color: var(--primary-accent); }
+        .nav-item button:hover svg { color: var(--primary-accent); }
 
         .main-content { width: 100%; height: 100%; display: flex; flex-direction: column; }
         .main-header { padding: 1rem 1.5rem; border-bottom: 1px solid var(--border-color); flex-shrink: 0; display: flex; justify-content: space-between; align-items: center; }
@@ -121,9 +125,9 @@
                 <div class="sidebar-header">MHDS</div>
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="#" id="show-files-button">
+                        <button id="show-files-button">
                             <svg><use href="#icon-folder" /></svg> Formlar
-                        </a>
+                        </button>
                     </li>
                 </ul>
             </nav>
@@ -215,8 +219,6 @@
         
         // --- SAYFA NAVİGASYONU ---
         showFilesButton.addEventListener('click', (e) => {
-            e.preventDefault();
-            e.stopPropagation(); // HATA DÜZELTMESİ: Olayın yayılmasını engeller
             welcomeView.style.display = 'none';
             fileView.style.display = 'block';
             mainTitle.textContent = 'Formlar';
