Update index.html v18

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         *, *::before, *::after { box-sizing: border-box; }
         body {
             font-family: 'Inter', sans-serif; margin: 0; background-color: var(--background); color: var(--text-dark); height: 100vh; overflow: hidden; transition: background-color 0.3s ease, color 0.3s ease;
-            -webkit-tap-highlight-color: transparent; /* Dokunma vurgusunu kaldırır */
         }
         .app-wrapper {
             width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; padding: 0; background: linear-gradient(135deg, #fff7ed, #fff1e5);
@@ -25,7 +24,7 @@
         body.dark-theme .app-wrapper { background: linear-gradient(135deg, #1e293b, #0f172a); }
 
         #login-screen {
-            position: fixed; inset: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: var(--background); z-index: 210; opacity: 1; transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+            position: fixed; inset: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; background: var(--background); z-index: 10; opacity: 1; transition: opacity 0.5s ease-out, transform 0.5s ease-out;
         }
         #login-screen.hidden { opacity: 0; transform: scale(0.95); pointer-events: none; }
         .login-logo { max-width: 140px; height: auto; margin-bottom: 2rem; }
@@ -41,6 +40,7 @@
         }
         #app-container.visible { opacity: 1; transform: translateY(0); }
         
+        /* DÜZELTME: OVERLAY VE SIDEBAR MIMARISI YENIDEN YAZILDI */
         .sidebar {
             width: var(--sidebar-width); height: 100%; background-color: var(--background); border-right: 1px solid var(--border-color); padding: 1.5rem; display: flex; flex-direction: column; 
             transition: transform 0.4s ease, background-color 0.3s ease; 
@@ -96,12 +96,14 @@
             position: fixed; inset: 0; background-color: rgba(0,0,0,0.4); z-index: 200; opacity: 0; transition: opacity 0.4s ease; pointer-events: none;
         }
         
+        /* MASAÜSTÜ GÖRÜNÜMÜ */
         @media (min-width: 800px) {
             #app-container { flex-direction: row; }
             .sidebar { position: static; transform: translateX(0); }
             .main-content { flex-grow: 1; }
             .hamburger-button, #sidebar-overlay { display: none; }
         }
+        /* MOBİL GÖRÜNÜMÜ */
         @media (max-width: 799px) {
             .sidebar { position: fixed; transform: translateX(-100%); }
             body.sidebar-open .sidebar { transform: translateX(0); box-shadow: 10px 0 30px rgba(0,0,0,0.1); }
@@ -142,8 +144,8 @@
                 </div>
                 <footer class="sidebar-footer">
                     <div class="version-info" id="version-info">
-                        <span class="short-version">v.17.0</span>
-                        <span class="long-version">v.17.0 - Mobil dokunma gecikmesi (300ms) sorunu giderildi</span>
+                        <span class="short-version">v.15.0</span>
+                        <span class="long-version">v.15.0 - Mobil dokunma gecikmesi (300ms) sorunu giderildi</span>
                     </div>
                 </footer>
             </nav>
