--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -554,6 +555,7 @@
 </body>
 </html>
 
+=== /api/getFiles.js ===
 export default function handler(request, response) {
     // Sadece POST isteklerini kabul et
     if (request.method !== 'POST') {
