--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         .nav-item button.active, .nav-item button:hover { background-color: var(--border-color); }
         .nav-item svg { width: 20px; height: 20px; margin-right: 1rem; color: var(--text-light); transition: color 0.2s; pointer-events: none; }
 
-        .main-content { flex-grow: 1; height: 100%; display: flex; flex-direction: column; }
+        .main-content { 
+            flex-grow: 1; height: 100%; display: flex; flex-direction: column; 
+            overflow: hidden; /* EKLENEN SATIR: Bu satır kaydırma sorununu düzeltir */
+        }
         .main-header { padding: 1rem 1.5rem; flex-shrink: 0; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid var(--border-color); }
         .hamburger-button { background: none; border: none; cursor: pointer; padding: 0.5rem; color: var(--text-dark); display: none; }
         .search-bar { flex-grow: 1; margin: 0 1rem; background-color: var(--background); border: 1px solid var(--border-color); border-radius: 2rem; padding: 0.6rem 1rem; color: var(--text-light); }
